# football-experiments

./: .gitignore  README.md
scraping-tools/: .gitignore  main.py  pyproject.toml
scraping-tools/scraping_tools/profootballfocus/: AuthenticationPage.py  BigBoardPage.py  Driver.py  ProfilePage.py
scraping-tools/scraping_tools/ras_football/: Driver.py  RasQueryPage.py
