[tool.poetry]
name = "scraping-tools"
version = "0.1.0"
description = ""
authors = ["Christopher Bartling <chris.bartling@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
